# Neural-Network-Forward-Pass-Algorithm

./: README.md
oop-hw3/: CMakeLists.txt
oop-hw3/include/: Activation.h  Layer.h  Matrix.h  Network.h
oop-hw3/src/: Activation.cpp  Layer.cpp  Matrix.cpp  Network.cpp  main.cpp
